--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
   float: right;
 }
 
-#Right h1 {
+h1 {
   color: #474b51;
   text-decoration: underline;
   text-align: center;
@@ -53,7 +53,7 @@
 
 }
 
-#Right h2 {
+h2 {
   margin-bottom: 1px;
   background-color: #474b51;
   color:#fff;
@@ -63,13 +63,12 @@
 }
 
 h3 {
-  margin-bottom: 1px;
-  margin-top: 1px;
+  margin-bottom: 16px;
+  margin-top: 16px;
   font-style: italic;
 }
 
 
 ul {
   list-style: square;
-
 }
