--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
     (Q2-5) Style the work history entries from Q1-5 so that they all end up consistent in their appearance. Change at least 5 properties. */
 
 #TopHeading {
-  background-color: #474b51;
-  color: #3ebbf9;
+  background-color: #36486b;
+  color: #fefbd8;
   text-align: center;
   font-size: 20px;
   border-radius: 15px;
@@ -18,12 +18,12 @@
   margin: auto;
 }
 #main #pic img {
-  height: 50px;
-  width: 50px;
-  border: 30px #ff7b25
+  height: 200px;
+  width: 200px;
+  border: 30px #454140;
 }
 #TopHeading h1 {
-  color: ##034f84;
+  color: #034f84;
   text-decoration: underline;
   text-align: center;
   background-color: #f7cac9;
