--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
     (Q2-5) Style the work history entries from Q1-5 so that they all end up consistent in their appearance. Change at least 5 properties. */
 
 #TopHeading {
-  background-color: #f7cac9;
-  color: #034f84;
+  background-color: #034f84;
+  color: #f7cac9;
   text-align: center;
   font-size: 20px;
   border-radius: 15px;
@@ -18,42 +18,46 @@
   margin: auto;
 }
 #main #pic img {
-  height: 200px;
-  width: 200px;
+  height: 400px;
+  width: 400px;
   border: 30px #454140;
 }
 #TopHeading h1 {
-  color: #034f84;
+  color: #f7cac9;
   text-decoration: underline;
   text-align: center;
-  background-color: #f7cac9;
+  background-color: #034f84;
   border-radius: 15px;
   font-size: 45px;
 }
 
 #main #history h3 {
   font-style: italic;
+  margin:2;
 }
 
 #main #history h4 {
   font-size: 50px;
   font-style: italic;
+  margin:2;
 }
 
 #main #history h5 {
   font-size: 30px;
   font-style: italic;
+  margin:2
 }
 #main #history h6 {
   font-style: italic;
   font-size: 25px;
+  margin:2;
 }
 #main #history h8 {
   border-top: 15px;
   font-style: italic;
   font-size: 25px;
   border-bottom: 16px;
-
+  margin:2;
 }
 #main #history ul {
   list-style: square;
