--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 #TopHeading {
   background-color: #034f84;
-  color: #f7cac9;
+  color: #ffef96;
   text-align: center;
   font-size: 20px;
   border-radius: 15px;
@@ -18,12 +18,12 @@
   margin: auto;
 }
 #main #pic img {
-  height: 400px;
+  height: 600px;
   width: 400px;
   border: 30px #454140;
 }
 #TopHeading h1 {
-  color: #f7cac9;
+  color: #ffef96;
   text-decoration: underline;
   text-align: center;
   background-color: #034f84;
@@ -33,31 +33,31 @@
 
 #main #history h3 {
   font-style: italic;
-  margin:2;
+  margin:2px;
 }
 
 #main #history h4 {
   font-size: 50px;
   font-style: italic;
-  margin:2;
+  margin:2px;
 }
 
 #main #history h5 {
   font-size: 30px;
   font-style: italic;
-  margin:2
+  margin:2px;
 }
 #main #history h6 {
   font-style: italic;
   font-size: 25px;
-  margin:2;
+  margin:2px;
 }
 #main #history h8 {
   border-top: 15px;
   font-style: italic;
   font-size: 25px;
   border-bottom: 16px;
-  margin:2;
+  margin:2px;
 }
 #main #history ul {
   list-style: square;
