--- a/style.css
+++ b/style.css
@@ -55,11 +55,11 @@
 #main #history h7 {
   font-size: 20px;
   margin-top:2px;
-  margin-bottom: 10px;
+  margin-bottom: 100px;
 }
 #main #history h8 {
   border-top: 30px;
-  font-style: bold;
+  font-weight: bold;
   font-size: 25px;
   border-bottom: 16px;
   margin-top:10px;
