--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@
   font-size: 30px;
   font-style: italic;
   margin-bottom: 0px;
+  margin-top: 0px;
 }
 #main #history h6 {
   font-style: italic;
