--- a/style.css
+++ b/style.css
@@ -51,7 +51,8 @@
 #main #history h6 {
   font-style: italic;
   font-size: 25px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px
 }
 #main #history h7 {
   font-size: 20px;
